Trabajo con datos null

--- a/[NRC_6292]_JuniorZambrano_La2Unidad2.ipynb
+++ b/[NRC_6292]_JuniorZambrano_La2Unidad2.ipynb
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff4e72cd",
+   "id": "ab747887",
    "metadata": {},
    "outputs": [
     {
@@ -168,9 +168,319 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19e058de",
+   "metadata": {},
+   "source": [
+    "# DATOS NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f0e96486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CrimeId                      0\n",
+       "OriginalCrimeTypeName        0\n",
+       "OffenseDate                  0\n",
+       "CallTime                     0\n",
+       "CallDateTime                 0\n",
+       "Disposition                  0\n",
+       "Address                      0\n",
+       "City                       321\n",
+       "State                        3\n",
+       "AgencyId                     0\n",
+       "Range                    10051\n",
+       "AddressType                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Conteo general de datos null'''\n",
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eb102c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CrimeId</th>\n",
+       "      <th>OriginalCrimeTypeName</th>\n",
+       "      <th>OffenseDate</th>\n",
+       "      <th>CallTime</th>\n",
+       "      <th>CallDateTime</th>\n",
+       "      <th>Disposition</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>AgencyId</th>\n",
+       "      <th>AddressType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5870</th>\n",
+       "      <td>160942296</td>\n",
+       "      <td>Muni Inspection</td>\n",
+       "      <td>2016-04-03T00:00:00</td>\n",
+       "      <td>15:24</td>\n",
+       "      <td>2016-04-03T15:24:00</td>\n",
+       "      <td>HAN</td>\n",
+       "      <td>King St &amp; 2nd St Muni Light Rail Platfor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Geo-Override</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7545</th>\n",
+       "      <td>160951360</td>\n",
+       "      <td>Dog Bite</td>\n",
+       "      <td>2016-04-04T00:00:00</td>\n",
+       "      <td>11:05</td>\n",
+       "      <td>2016-04-04T11:05:00</td>\n",
+       "      <td>HAN</td>\n",
+       "      <td>300 Block Of Martin Luther King Dr</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Common Location</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>160913910</td>\n",
+       "      <td>Rep</td>\n",
+       "      <td>2016-03-31T00:00:00</td>\n",
+       "      <td>23:21</td>\n",
+       "      <td>2016-03-31T23:21:00</td>\n",
+       "      <td>HAN</td>\n",
+       "      <td>1600 Block Of Sacramento St</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Premise Address</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CrimeId OriginalCrimeTypeName          OffenseDate CallTime  \\\n",
+       "5870  160942296       Muni Inspection  2016-04-03T00:00:00    15:24   \n",
+       "7545  160951360              Dog Bite  2016-04-04T00:00:00    11:05   \n",
+       "56    160913910                   Rep  2016-03-31T00:00:00    23:21   \n",
+       "\n",
+       "             CallDateTime Disposition  \\\n",
+       "5870  2016-04-03T15:24:00         HAN   \n",
+       "7545  2016-04-04T11:05:00         HAN   \n",
+       "56    2016-03-31T23:21:00         HAN   \n",
+       "\n",
+       "                                       Address           City State AgencyId  \\\n",
+       "5870  King St & 2nd St Muni Light Rail Platfor            NaN    CA        1   \n",
+       "7545        300 Block Of Martin Luther King Dr  San Francisco    CA        1   \n",
+       "56                 1600 Block Of Sacramento St  San Francisco    CA        1   \n",
+       "\n",
+       "          AddressType  \n",
+       "5870     Geo-Override  \n",
+       "7545  Common Location  \n",
+       "56    Premise Address  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''El determinar que la columna Range posee 10051 datos null y la muestra es de 10051 datos, se procede a eliminarla toda'''\n",
+    "data = data.drop(['Range'], axis=1)\n",
+    "data.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "16b2c35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CrimeId</th>\n",
+       "      <th>OriginalCrimeTypeName</th>\n",
+       "      <th>OffenseDate</th>\n",
+       "      <th>CallTime</th>\n",
+       "      <th>CallDateTime</th>\n",
+       "      <th>Disposition</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>AgencyId</th>\n",
+       "      <th>AddressType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4693</th>\n",
+       "      <td>160940206</td>\n",
+       "      <td>Assault / Battery</td>\n",
+       "      <td>2016-04-03T00:00:00</td>\n",
+       "      <td>1:11</td>\n",
+       "      <td>2016-04-03T01:11:00</td>\n",
+       "      <td>UTL</td>\n",
+       "      <td>Sutter St/larkin St</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Intersection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4709</th>\n",
+       "      <td>160940232</td>\n",
+       "      <td>Party</td>\n",
+       "      <td>2016-04-03T00:00:00</td>\n",
+       "      <td>1:20</td>\n",
+       "      <td>2016-04-03T01:20:00</td>\n",
+       "      <td>HAN</td>\n",
+       "      <td>400 Block Of 24th Av</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Premise Address</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>160921101</td>\n",
+       "      <td>Silent Holdup Alarm</td>\n",
+       "      <td>2016-04-01T00:00:00</td>\n",
+       "      <td>10:00</td>\n",
+       "      <td>2016-04-01T10:00:00</td>\n",
+       "      <td>NCR</td>\n",
+       "      <td>400 Block Of Arguello Bl</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Premise Address</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CrimeId OriginalCrimeTypeName          OffenseDate CallTime  \\\n",
+       "4693  160940206     Assault / Battery  2016-04-03T00:00:00     1:11   \n",
+       "4709  160940232                 Party  2016-04-03T00:00:00     1:20   \n",
+       "725   160921101   Silent Holdup Alarm  2016-04-01T00:00:00    10:00   \n",
+       "\n",
+       "             CallDateTime Disposition                   Address  \\\n",
+       "4693  2016-04-03T01:11:00         UTL       Sutter St/larkin St   \n",
+       "4709  2016-04-03T01:20:00         HAN      400 Block Of 24th Av   \n",
+       "725   2016-04-01T10:00:00         NCR  400 Block Of Arguello Bl   \n",
+       "\n",
+       "               City State AgencyId      AddressType  \n",
+       "4693  San Francisco    CA        1     Intersection  \n",
+       "4709  San Francisco    CA        1  Premise Address  \n",
+       "725   San Francisco    CA        1  Premise Address  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Trabajar solo con datos que no contengan NULL'''\n",
+    "data = data.dropna()\n",
+    "data.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6f50a278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CrimeId                  0\n",
+       "OriginalCrimeTypeName    0\n",
+       "OffenseDate              0\n",
+       "CallTime                 0\n",
+       "CallDateTime             0\n",
+       "Disposition              0\n",
+       "Address                  0\n",
+       "City                     0\n",
+       "State                    0\n",
+       "AgencyId                 0\n",
+       "AddressType              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Comprobación que no existen null'''\n",
+    "data.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b005c9",
+   "id": "22bedd32",
    "metadata": {},
    "outputs": [],
    "source": []
